# prelegal

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: ai.py  docs.py  fields.py  main.py  prompts.py  pyproject.toml  template_renderer.py  test_main.py
frontend/: jest.config.ts  package.json
frontend/src/__tests__/: DocPreview.test.tsx  MNDAPreview.test.tsx  SelectPage.test.tsx  types.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/preview/: page.tsx
frontend/src/app/select/: page.tsx
frontend/src/components/: ChatPanel.tsx  DocPreview.tsx  DocTypeCard.tsx  MNDAPreview.tsx
frontend/src/lib/: docTypes.ts
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
templates/cover-pages/: ai_addendum.md  baa.md  csa.md  design_partner.md  dpa.md  mnda.md  partnership.md  pilot.md  psa.md  sla.md  software_license.md
